Rewritten commands to allow defining Regions Fixed #33 by moving inject into lambda method instead