@@ -14,6 +14,7 @@ import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -26,7 +27,7 @@ public class ChunkHolderMixin {
 
     @Inject(method = "sendPacketToPlayers", at=@At("HEAD"))
     void handleChunkUpdate(List<ServerPlayerEntity> players, Packet<?> packet, CallbackInfo ci){
-        Set<RegionRecorder> recorders = Set.copyOf(((RegionRecorderWorld)this.world).getRegionRecordersByChunk().get(this.pos));
+        Set<RegionRecorder> recorders = Set.copyOf(((RegionRecorderWorld) this.world).getRegionRecordersByChunk().getOrDefault(this.pos, Collections.emptySet()));
         if (recorders != null)
             recorders.forEach( r -> r.onPacket(packet));
     }
